<resources>
    <string name="app_name">Balloon Burst Game</string>
    <string name="time">Remaining Time : </string>
    <string name="countDown">5</string>
    <string name="score">Score : </string>
    <string name="description">Picture of a pink balloon</string>
    <string name="highScore">New High Score!</string>
    <string name="congrats">Congratulations!</string>
    <string name="yourScore">Your Score : </string>
    <string name="yourHighScore">High Score : </string>
    <string name="playAgain">Play Again</string>
    <string name="quitGame">Quit Game</string>
</resources>